02-istio-ingress-gateway-health-check.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-healthcheck
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - hosts:
        - "*"
      port:
        number: 80
        name: http
        protocol: HTTP
---

---
# GCP sends health-checks to "/" on the same port as the backend defined in the ingress
# But whereas IStio should receive traffic on port 80, its health-check is on port 15020
# We therefore use Istio itself to redirect the health-check
#  - from endpoint on port 80
#  - to endpoint on port 15021
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: health
spec:
  gateways:
    - istio-healthcheck
  hosts:
    - "*"
  http:
    - match:
        - headers:
            user-agent:
              prefix: GoogleHC
          method:
            exact: GET
          uri:
            exact: /
      rewrite:
        authority: istio-ingressgateway.istio-ingress.svc.cluster.local:15020
        uri: /healthz/ready
      route:
        - destination:
            host: istio-ingressgateway.istio-ingress.svc.cluster.local
            port:
              number: 15021
